# ESP-IDF-sandbox

./: .gitignore  CMakeLists.txt  POSIX_filehandling.c  README.md
GPIO/: README.md
GPIO/main/: CMakeLists.txt  main.c
GPIO/main/interrupts/: interrupts.c  interrupts.h
GPIO/main/ledc_pwm/: ledc.c  ledc.h
SPI/: README.md
SPI-SSD/: CMakeLists.txt
SPI-SSD/main/: main.c
SPI/main/: CMakeLists.txt  main.c
SPI/main/i2c_temp/: i2c_temp.c  i2c_temp.h
SPI/main/uart_queue/: uart_queue.c  uart_queue.h
components/externComponents/: CMakeLists.txt  extern.c  extern.h
internet/: CMakeLists.txt  README.md
internet/components/wifi-connect/: wifi_connect.c
internet/main/: CMakeLists.txt  NTP.c  main.c  scanner.c  wifi_init.c
main/: CMakeLists.txt  main.c
main/eventGroup/: group.c  group.h
main/freeRTOScore/timers/: timers.c  timers.h
main/helpers/: helpers.c  helpers.h
main/mutex/: mutex.c
main/queue/: queue.c  queue.h
main/semaphor/: sema.c  sema.h
main/twotasks/: tasks.c  tasks.h
memory/: README.md
memory/main/: main.c
menuconfig-custom-menu/: CMakeLists.txt  README.md
menuconfig-custom-menu/main/: Kconfig.projbuild  main.c
rest-client/: CMakeLists.txt  README.md
rest-client/components/wifi_connect/: CMakeLists.txt
rest-client/main/: main.c
rtos-core-functionality/: CMakeLists.txt  README.md
rtos-core-functionality/externalComponents/: CMakeLists.txt  logInfo.c  loginfo.h
rtos-core-functionality/main/: CMakeLists.txt  main.c
rtos-core-functionality/main/synchronisationPrimitives/eventGroup/: group.h
rtos-core-functionality/main/synchronisationPrimitives/mutex/: mutex.h
rtos-core-functionality/main/synchronisationPrimitives/semaphore/: sema.c  sema.h
sandbox/components/externComponents/: extern.h
sandbox/main/: main.c
sandbox/main/freeRTOScore/twotasks/: tasks.c
sandbox/main/synchronisationPrimitives/twotasks/: tasks.c
sandbox/main/timeHandling/delay/: delay.c
sleep/: CMakeLists.txt  README.md
sleep/main/: CMakeLists.txt
sleep/main/deepSleep/: deep.c  deep.h
sleep/main/lightSleep/: light.c  light.h
storage/FileAllocationTable/: CMakeLists.txt  README.md  partitions.csv
storage/FileAllocationTable/main/: main.c
storage/NVS_and_SPIFFS/: CMakeLists.txt  README.md  partitions.csv
storage/NVS_and_SPIFFS/main/: CMakeLists.txt  component.mk
storage/NVS_and_SPIFFS/main/SPIFFS/: SPIFFS.c  SPIFFS.h
storage/NVS_and_SPIFFS/spiffs_dir/: index.html
storage/embedWithFlash/: README.md  esptool.py  partitions.csv  spiffsgen.py
storage/embedWithFlash/main/: CMakeLists.txt  main.c
storage/embedWithFlash/main/NVS_KV_pairs/: nvs.c  nvs.h
storage/embedWithFlash/main/NVS_demoFiles/: sample.txt
storage/embedWithFlash/main/SPIFFS/: SPIFFS.c  SPIFFS.h
